# persistence-agent

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: agent_features.rs  barcode.rs  boundary.rs  error.rs  lib.rs  point_cloud.rs  reduction.rs  tests.rs  vietoris_rips.rs
