[package]
name = "persistence-agent"
version = "0.1.0"
edition = "2021"
description = "Persistent homology for agent behavior profiling — topological fingerprints"
license = "MIT"
repository = "https://github.com/SuperInstance/persistence-agent"
keywords = ["persistence", "homology", "topology", "agent", "profiling"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
