[package]
rust-version = "1.70"
readme = "README.md"
documentation = "https://docs.rs/persistence-agent"
name = "persistence-agent"
version = "0.1.0"
edition = "2024"
description = "Persistent homology for agent behavior — detect which behavioral patterns are signal vs noise"
license = "MIT"
repository = "https://github.com/SuperInstance/persistence-agent"
keywords = ["topology", "persistent-homology", "agent", "behavior", "TDA"]
categories = ["mathematics", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
